# btc-opreturns

./: CMakeLists.txt  LICENSE  README.md  hextobin.sh  process-bins.sh
src/: main.cpp
